# pytorch-lab

./: .gitignore  .rumdl.toml  AGENTS.md  CLAUDE.md  Makefile  README.md  helper_functions.py  pyproject.toml
.claude/: settings.json
.claude/status_lines/: status_line_v2.py  status_line_v3.py  status_line_v4.py  status_line_v5.py  status_line_v6.py  status_line_v7.py  status_line_v8.py  status_line_v9.py
.cursor/rules/: python.mdc
.github/workflows/: unit-tests.yml
ai_docs/: conda-to-uv-migration.md  pytorch-testing-notes.md  screencropnet-assets.md  uv-projects.md  uv-pytorch-mac.md
ai_docs/development/label-studio/: README.md  labeling-configs.md  screencropnet-workflow.md  setup.md
ai_docs/html/: visual-testing-patterns.html
contrib/: collect_env.py  data_doctor.py  docstring_coverage.py  does-matplotlib-work.py  fetch_screencropnet_assets.py  is-mps-available.py  label_pointer.py  preprocessing_data_loader.py  setup-dataset-scratch-env.sh  zip-dataset.sh
docs/: README.md
docs/api/: README.md  contrib.md  going_modular.md  helper_functions.md  screencropnet.md  screennet.md  tasks.md
docs/architecture/: README.md
docs/coverage_docs/: README.md  report.md
docs/guides/: README.md  development-workflow.md  getting-started.md  screencropnet-localization.md  screennet-classification.md  troubleshooting.md
docs/superpowers/specs/: 2026-05-17-makefile-force-flag-design.md
going_modular/going_modular/: data_setup.py  engine.py  model_builder.py  predictions.py  train.py  utils.py
going_modular/pytorch_ipynb/: helper_data.py  helper_evaluate.py  helper_plotting.py  helper_train.py  helper_utils.py
screencropnet/: Makefile  arch.py  data_set.py  devices.py  extract-dominant-colors-of-an-image.py  finding-most-common-colors.py  helpers.py  image_utils.py  main.py  ml_types.py  pascal_to_csv.py  show_bbox_example.py  test_predict.py  try_predict.py
screennet/: Makefile  devices.py  main.py
specs/: post-migration-hardening.md  screencropnet-coverage-tdd.md  visual-testing-rules.md
tasks/: __init__.py  ci.py  local.py  ml_logger.py  utils.py
tests/: conftest.py  test_arch.py  test_checkpoint.py  test_cli_smoke.py  test_data_set.py  test_devices.py  test_docstring_coverage.py  test_entrypoint_import_safety.py  test_errors.py  test_fetch_assets.py  test_going_modular.py  test_helper_functions.py  test_helpers_iou.py  test_helpers_nms_map.py  test_image_utils.py  test_imports.py  test_label_pointer.py  test_preprocessing_data_loader.py  test_screencropnet_main_compute.py  test_screencropnet_main_units.py  test_screencropnet_scripts.py  test_screennet_main_compute.py  test_screennet_main_units.py
tests/fixtures/: sample_voc.xml
