[project]
name = "pytorch-lab"
version = "0.1.0"
description = "PyTorch experimentation lab: screennet (classification) + screencropnet (bbox regression) + going_modular utilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "better-exceptions>=0.3.3",
    "bpython>=0.26",
    "fastai>=2.8.7",
    "icecream>=2.2.0",
    "matplotlib>=3.10.9",
    "mlxtend>=0.24.0",
    "numpy>=2.4.5",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pyfiglet>=1.0.4",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "tensorboard>=2.20.0",
    "timm>=1.0.27",
    "torch>=2.12.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "watermark>=2.6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Flat / mixed layout: a top-level helper module, a renamed nested package
# (going_modular/going_modular -> import as `going_modular`), and the two
# subproject packages. Installing the project editable replaces every
# sys.path.append hack.
[tool.setuptools]
py-modules = ["helper_functions"]
packages = ["going_modular", "screennet", "screencropnet"]

[tool.setuptools.package-dir]
going_modular = "going_modular/going_modular"

[tool.ruff]
line-length = 88
target-version = "py312"
# Post-migration hardening scope: lint/format the model subprojects, shared
# utils, contrib scripts and tests. Out-of-scope legacy paths are excluded
# here so repo-wide `ruff check .` stays clean; cleaning them is a tracked
# follow-up (see specs/post-migration-hardening.md).
extend-exclude = [
    ".claude",
    "tasks",
    "label_pointer.py",
    "preprocessing_data_loader.py",
    "*.ipynb",
]

[tool.ruff.lint]
# Start permissive; this is being modernized incrementally.
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "E203"]

[tool.ruff.lint.isort]
known-first-party = ["going_modular", "screennet", "screencropnet", "helper_functions"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
reportPrivateImportUsage = false  # torch re-exports (torch.tensor etc.)
useLibraryCodeForTypes = true
reportMissingTypeStubs = "none"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
# going_modular is installed as a package via [tool.setuptools] package-dir
# (going_modular -> going_modular/going_modular). Point pyright at the same
# parent so `from going_modular import ...` resolves statically too.
extraPaths = ["going_modular"]
exclude = [".venv", "**/__pycache__", "scratch", "logs"]

[tool.pytest.ini_options]
addopts = "--capture=no --disable-warnings"
testpaths = ["tests"]

# Coverage is opt-in (the `test-cov` Makefile target / CI) so plain
# `make test` stays fast. `source` here lets bare `pytest --cov` and a later
# plain `coverage report` measure the same four targets without flags.
[tool.coverage.run]
source = ["going_modular", "screennet", "screencropnet", "helper_functions"]
branch = true
omit = [
    "screencropnet/extract-dominant-colors-of-an-image.py",
    "screencropnet/finding-most-common-colors.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "invoke>=3.0.3",
    "ipython>=9.13.0",
    "jupyter>=1.1.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.13",
]
